--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,12 +21,12 @@
         android:text="@string/app_name"
         android:textSize="30dp" />
 
-    <EditText
+    <EditText android:id="@+id/txtCodigo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/digiteCodigo" />
 
-    <EditText
+    <EditText android:id="@+id/txtCpf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/digiteCpf" />
