--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/digiteCpf" />
 
-    <Button
+    <Button android:onClick="entrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/entrar" />
