--- a/app/src/main/res/layout/activity_analisedados.xml
+++ b/app/src/main/res/layout/activity_analisedados.xml
@@ -105,7 +105,7 @@
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:max="100" />
+                android:max="100" android:progress="88" />
 
 
             <TextView
