--- a/app/src/main/res/layout/activity_analisedados.xml
+++ b/app/src/main/res/layout/activity_analisedados.xml
@@ -42,7 +42,7 @@
                 android:text="Data de envio "
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <TextView
+            <TextView android:id="@+id/envioAnalise"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:text="A amostra atingiu " />
 
-                <TextView
+                <TextView android:id="@+id/numCbt"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
 
@@ -105,7 +105,7 @@
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:max="100" android:progress="88" />
+                android:max="100" />
 
 
             <TextView
@@ -120,7 +120,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <TextView
+                <TextView android:id="@+id/numCcs"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="A amostra atingiu " />
@@ -155,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:text="A amostra atingiu " />
 
-                <TextView
+                <TextView android:id="@+id/numProteina"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
 
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:text="A amostra atingiu " />
 
-                <TextView
+                <TextView android:id="@+id/numGordura"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
 
