ajustado para efetuar ligacao para o suporte a partir do  link de ajuda

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="ligarSuporte"
+        android:clickable="true"
         android:text="@string/login_help"  />
 
 </LinearLayout>
